background in position change

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <h1 class="blue pmargin" style="font-size: 40px;">
                     Nourine Dridi
                 </h1>
-                <h4 class="pmargin psize bgblue white">
+                <h4 class="pmargin psize black">
                     Andragogy specialist - Fullstack Developer
                 </h4>
                 <p class="pmargin psize">
