--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
 <body>
     <div class="container">
-        <div class="top d-flex gap-5">
+    <div class="top d-flex justify-content-center align-item-center gap-5 ">
             <div class="pic">
                 <img src="./Assets/NourineDridi.jpg" alt="Nourine's picture" loading="lazy" width="200" height="200" style="border-radius: 50%;">
             </div>
-            <div class="name ">
+            <div class="name">
                 <h1 class="blue pmargin" style="font-size: 40px;">
                     Nourine Dridi
                 </h1>
