--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         href="https://cdn3.iconfinder.com/data/icons/science-and-laboratory-1/85/artificial_intelligence_brain_technology-64.png"
         type="image/x-icon">
 <link rel="stylesheet" href="./style/style.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
 <body>
@@ -21,7 +22,7 @@
                 <h1 class="blue pmargin" style="font-size: 40px;">
                     Nourine Dridi
                 </h1>
-                <h4 class="pmargin psize black">
+                <h4 class="pmargin psize bgblue white " style="font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif">
                     Andragogy specialist - Fullstack Developer
                 </h4>
                 <p class="pmargin psize">
@@ -78,7 +79,7 @@
                     <p>ISEFC Bardo</p>
                     </div>
                     <div>
-                        <p>June 2023-September 2023</p>
+                        <p>June 2024-September 2024</p>
                     <h3>Professional Degree in Web development</h3>
                     <p>SFECTORIA Monplaisir</p>
                     </div>
@@ -90,16 +91,16 @@
                     </h2>
                     <div style="border:solid 1px white"></div>
                     <ul>
-                        <li>public speaking</li>
-                        <li> communication </li>
-                        <li>critical thinking</li>
-                        <li>problem solving</li>
-                        <li>coworking</li>
+                        <li>Public speaking</li>
+                        <li> Communication </li>
+                        <li>Critical thinking</li>
+                        <li>Problem solving</li>
+                        <li>Coworking</li>
                         <li>Planning Skills</li>
                         <li>Creativity</li>
                         <li>Emotional Intelligence</li>
                         <li>Google workspace</li>
-                        <li>cMicrosoft Office Specialist</li>
+                        <li>Microsoft Office Specialist</li>
                     </ul>
                 </div>
                 <div class="language">
@@ -115,12 +116,16 @@
             </div>
             <div class="right pmargin " >
                 <div class="exp">
-                    <h2 style="color: steelblue; font-size: 24px;">
+                    <h2 style="color: steelblue; font-size: 26px;">
                         Experience
                     </h2>
+                    <div style="border:solid 1px white"></div>
                     <div class="exp1">
-                        <h5>2021-2022</h5>
-                        <p>Minestry of Education </p>
+                        <div class="d-flex" >
+                            <i class="material-icons" >cloud</i>
+                            <h5>2021-2022</h5>
+                        </div>
+                        <p style="border-left: 3px lightgrey;">Minestry of Education </p>
                         <h5>French Teaching Internship In Public Primary Schools </h5>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum at quo voluptas amet nemo hic facilis, consequuntur alias autem unde repudiandae nesciunt itaque distinctio sapiente, expedita dolores odio dolore cumque!</p>
                     </div>
@@ -228,22 +233,24 @@
                     </div>
                 </div>
                 <div class="ref">
-                    <h2 style="color: steelblue; font-size: 24px;">
+                    <h2 style="color: steelblue; font-size: 26px;">
                         Refrences
                     </h2>
-                    <div  class="d-flex gap-5">
+                    <div style="border:solid 1px white"></div>
+    <div  class="d-flex gap-5 ">
                         <div class="right">
                             <h3>
-                                refrence 1
+                                Refrence 1
                             </h3>
                         </div>
                         <div class="left" >
                             <h3>
-                                refrence 2
+                                Refrence 2
                             </h3>
                         </div>
                     </div>
                 </div>
+                <div style="border:solid 4px white"></div>
             </div>
         </div>
     </div>
