--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <h2 style="color: steelblue; font-size: 26px;">
                         Experience
                     </h2>
-                    <div style="border:solid 1px white"></div>
+                    <div style="border:solid 1px black"></div>
                     <div class="exp1">
                         <div class="d-flex" >
                             <i class="material-icons" >cloud</i>
@@ -236,7 +236,7 @@
                     <h2 style="color: steelblue; font-size: 26px;">
                         Refrences
                     </h2>
-                    <div style="border:solid 1px white"></div>
+                    <div style="border:solid 1px black"></div>
     <div  class="d-flex gap-5 ">
                         <div class="right">
                             <h3>
@@ -250,7 +250,7 @@
                         </div>
                     </div>
                 </div>
-                <div style="border:solid 4px white"></div>
+                <div style="border:solid 4px black"></div>
             </div>
         </div>
     </div>
