space around for refrences

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                         Refrences
                     </h2>
                     <div style="border:solid 1px black"></div>
-    <div  class="d-flex gap-5 ">
+    <div  class="d-flex gap-5 justify-content-space-around">
                         <div class="right">
                             <h3>
                                 Refrence 1
