--- a/index.html
+++ b/index.html
@@ -8,32 +8,36 @@
     <link rel="shortcut icon"
         href="https://cdn3.iconfinder.com/data/icons/science-and-laboratory-1/85/artificial_intelligence_brain_technology-64.png"
         type="image/x-icon">
-<link rel="stylesheet" href="./style/style.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
 <body>
     <div class="container">
-    <div class="top d-flex justify-content-center align-item-center gap-5 ">
-            <div class="pic">
-                <img src="./Assets/NourineDridi.jpg" alt="Nourine's picture" loading="lazy" width="200" height="200" style="border-radius: 50%;">
+        <div class="top d-flex justify-content-center align-item-center f-c" >
+            <div class="pic w-300 d-flex justify-content-center align-item-center" >
+                <img src="./Assets/NourineDridi.jpg" alt="Nourine's picture" loading="lazy" width="200" height="200"
+                    style="border-radius: 50%;">
             </div>
-            <div class="name">
-                <h1 class="blue pmargin" style="font-size: 40px;">
+            <div class="name maxwidth-700 " style="padding-left: 20px;">
+                <h1 class="blue " style="font-size: 40px;">
                     Nourine Dridi
                 </h1>
-                <h4 class="pmargin psize bgblue white " style="font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif">
+                <h4 class=" psize bgblue white "
+                    style="font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif">
                     Andragogy specialist - Fullstack Developer
                 </h4>
-                <p class="pmargin psize">
-                    Eager and dedicated Master's student specializing in Educational Sciences with a keen interest in Andragogy principles and Full-stack Web Development. Seeking opportunities to leverage research insights and web development skills to contribute to innovative educational solutions.
+                <p class=" psize">
+                    Eager and dedicated Master's student specializing in Educational Sciences with a keen interest in
+                    Andragogy principles and Full-stack Web Development. Seeking opportunities to leverage research
+                    insights and web development skills to contribute to innovative educational solutions.
                 </p>
             </div>
         </div>
-        <div class="bottom d-flex gap-5" >
-            <div class="left bgblue white p-20" >
-                
-                <div class="contact" >
+        <div class="bottom d-flex justify-content-center f-c">
+            <div class="left bgblue white  w-300 p-20">
+
+                <div class="contact">
                     <h2 class="">
                         Contact
                     </h2>
@@ -65,25 +69,25 @@
 
                     <div>
                         <p>2020</p>
-                    <h3>High School Degree in Experimental Sciences</h3>
-                    <p>LRT Mateur-Bizerta</p>
+                        <h3>High School Degree in Experimental Sciences</h3>
+                        <p>LRT Mateur-Bizerta</p>
                     </div>
                     <div>
                         <p>2020-2023</p>
-                    <h3>Bachlor Degree in Educational Sciences</h3>
-                    <p>ISEAH Zaghouan</p>
+                        <h3>Bachlor Degree in Educational Sciences</h3>
+                        <p>ISEAH Zaghouan</p>
                     </div>
                     <div>
                         <p>2023-2025</p>
-                    <h3>Master of research in Educational Sciences</h3>
-                    <p>ISEFC Bardo</p>
+                        <h3>Master of research in Educational Sciences</h3>
+                        <p>ISEFC Bardo</p>
                     </div>
                     <div>
                         <p>June 2024-September 2024</p>
-                    <h3>Professional Degree in Web development</h3>
-                    <p>SFECTORIA Monplaisir</p>
+                        <h3>Professional Degree in Web development</h3>
+                        <p>SFECTORIA Monplaisir</p>
                     </div>
-                    
+
                 </div>
                 <div class="expertise">
                     <h2>
@@ -114,32 +118,38 @@
                     <P>Deutsh A2</P>
                 </div>
             </div>
-            <div class="right pmargin " >
+            <div class="right  maxwidth-700  " style="padding-left: 20px;">
                 <div class="exp">
                     <h2 style="color: steelblue; font-size: 26px;">
                         Experience
                     </h2>
                     <div style="border:solid 1px black"></div>
                     <div class="exp1">
-                        <div class="d-flex" >
-                            <i class="material-icons" >cloud</i>
+                        <div class="d-flex">
+                            <i class="material-icons">cloud</i>
                             <h5>2021-2022</h5>
                         </div>
                         <p style="border-left: 3px lightgrey;">Minestry of Education </p>
                         <h5>French Teaching Internship In Public Primary Schools </h5>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum at quo voluptas amet nemo hic facilis, consequuntur alias autem unde repudiandae nesciunt itaque distinctio sapiente, expedita dolores odio dolore cumque!</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum at quo voluptas amet nemo
+                            hic facilis, consequuntur alias autem unde repudiandae nesciunt itaque distinctio sapiente,
+                            expedita dolores odio dolore cumque!</p>
                     </div>
                     <div class="exp2">
                         <h5>2022-2023</h5>
                         <p>Minestry of Education </p>
                         <h5>French Teaching Internship In Public Primary Schools </h5>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum at quo voluptas amet nemo hic facilis, consequuntur alias autem unde repudiandae nesciunt itaque distinctio sapiente, expedita dolores odio dolore cumque!</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum at quo voluptas amet nemo
+                            hic facilis, consequuntur alias autem unde repudiandae nesciunt itaque distinctio sapiente,
+                            expedita dolores odio dolore cumque!</p>
                     </div>
                     <div class="exp3">
                         <h5>2022-2023</h5>
                         <p>Minestry of Education </p>
                         <h5>Arabic Teaching Internship In Public Primary Schools </h5>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum at quo voluptas amet nemo hic facilis, consequuntur alias autem unde repudiandae nesciunt itaque distinctio sapiente, expedita dolores odio dolore cumque!</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum at quo voluptas amet nemo
+                            hic facilis, consequuntur alias autem unde repudiandae nesciunt itaque distinctio sapiente,
+                            expedita dolores odio dolore cumque!</p>
                     </div>
                     <div class="exp4">
                         <h5>2023-2024</h5>
@@ -149,8 +159,9 @@
                             - Developing lesson plans in line with Tunisian's curriculum objectives for french.
                             - Monitoring the students' learning development.
                             - Evaluating and assessing students' knowledge and skills in language acquisition.
-                            - Build course content on the students' knowledge of previous learnings and encourage them to deeprn their understanding on the subjects they are interested in.
-                            - Using class resources and teaching methods to create an inspiring learning environment. 
+                            - Build course content on the students' knowledge of previous learnings and encourage them
+                            to deeprn their understanding on the subjects they are interested in.
+                            - Using class resources and teaching methods to create an inspiring learning environment.
                             - Contributing to school events and communicating with parents and administrative staff.
                             - Classroom Management and maintaining a positive learning environment.
                             - Individualized Instruction to address diverse learning needs.
@@ -163,73 +174,97 @@
                         <h5>April 2024</h5>
                         <p>Open English Programs : OPEN MOOCs US Embassy</p>
                         <h5>INTEGRATING CRITICAL THINKING SKILLS INTO THE EXPLORATION OF CULTURE IN AN EFL SETTING </h5>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum at quo voluptas amet nemo hic facilis, consequuntur alias autem unde repudiandae nesciunt itaque distinctio sapiente, expedita dolores odio dolore cumque!</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum at quo voluptas amet nemo
+                            hic facilis, consequuntur alias autem unde repudiandae nesciunt itaque distinctio sapiente,
+                            expedita dolores odio dolore cumque!</p>
                     </div>
                     <div class="exp6">
                         <h5>March 2024</h5>
                         <p>Open English Programs : OPEN MOOCs US Embassy</p>
                         <h5>TEACHING ENGLISH TO LARGE CLASSES</h5>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum at quo voluptas amet nemo hic facilis, consequuntur alias autem unde repudiandae nesciunt itaque distinctio sapiente, expedita dolores odio dolore cumque!</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum at quo voluptas amet nemo
+                            hic facilis, consequuntur alias autem unde repudiandae nesciunt itaque distinctio sapiente,
+                            expedita dolores odio dolore cumque!</p>
                     </div>
                     <div class="exp6">
                         <h5>June 2024 - pursuing </h5>
                         <p>Coursera and The University of Sydney </p>
                         <h5>POSITIVE PSYCHIATRY AND MENTAL HEALTH</h5>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum at quo voluptas amet nemo hic facilis, consequuntur alias autem unde repudiandae nesciunt itaque distinctio sapiente, expedita dolores odio dolore cumque!</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum at quo voluptas amet nemo
+                            hic facilis, consequuntur alias autem unde repudiandae nesciunt itaque distinctio sapiente,
+                            expedita dolores odio dolore cumque!</p>
                     </div>
                     <div class="exp7">
                         <h5>June 2024 - pursuing</h5>
                         <p>Coursera and Yale University </p>
                         <h5>INTRODUCTION TO PSYCHOLOGY</h5>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum at quo voluptas amet nemo hic facilis, consequuntur alias autem unde repudiandae nesciunt itaque distinctio sapiente, expedita dolores odio dolore cumque!</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum at quo voluptas amet nemo
+                            hic facilis, consequuntur alias autem unde repudiandae nesciunt itaque distinctio sapiente,
+                            expedita dolores odio dolore cumque!</p>
                     </div>
                     <div class="exp8">
                         <h5>June 2024 - pursuing</h5>
                         <p>Coursera and Wesleyan University </p>
                         <h5>INTRODUCTION TO ABNORMAL PSYCHOLOGY </h5>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum at quo voluptas amet nemo hic facilis, consequuntur alias autem unde repudiandae nesciunt itaque distinctio sapiente, expedita dolores odio dolore cumque!</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum at quo voluptas amet nemo
+                            hic facilis, consequuntur alias autem unde repudiandae nesciunt itaque distinctio sapiente,
+                            expedita dolores odio dolore cumque!</p>
                     </div>
                     <div class="exp9">
                         <h5>2021-2023</h5>
                         <p>4C ISEAHZ</p>
                         <h5>4C ISEAHZ AMBASSADOR </h5>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum at quo voluptas amet nemo hic facilis, consequuntur alias autem unde repudiandae nesciunt itaque distinctio sapiente, expedita dolores odio dolore cumque!</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum at quo voluptas amet nemo
+                            hic facilis, consequuntur alias autem unde repudiandae nesciunt itaque distinctio sapiente,
+                            expedita dolores odio dolore cumque!</p>
                     </div>
                     <div class="exp10">
                         <h5>November 2022</h5>
                         <p>Microsoft and 4C ISEAHZ</p>
                         <h5>MICROSOF OFFICE SPECIALIST - ASSOCIATE </h5>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum at quo voluptas amet nemo hic facilis, consequuntur alias autem unde repudiandae nesciunt itaque distinctio sapiente, expedita dolores odio dolore cumque!</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum at quo voluptas amet nemo
+                            hic facilis, consequuntur alias autem unde repudiandae nesciunt itaque distinctio sapiente,
+                            expedita dolores odio dolore cumque!</p>
                     </div>
                     <div class="exp11">
                         <h5>June 2023</h5>
                         <p>HP Life </p>
                         <h5>SUCCESS MINDSET </h5>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum at quo voluptas amet nemo hic facilis, consequuntur alias autem unde repudiandae nesciunt itaque distinctio sapiente, expedita dolores odio dolore cumque!</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum at quo voluptas amet nemo
+                            hic facilis, consequuntur alias autem unde repudiandae nesciunt itaque distinctio sapiente,
+                            expedita dolores odio dolore cumque!</p>
                     </div>
                     <div class="exp12">
                         <h5>June 2023</h5>
                         <p>HP Life </p>
                         <h5>EFFECTIVE PRESENTATIONS</h5>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum at quo voluptas amet nemo hic facilis, consequuntur alias autem unde repudiandae nesciunt itaque distinctio sapiente, expedita dolores odio dolore cumque!</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum at quo voluptas amet nemo
+                            hic facilis, consequuntur alias autem unde repudiandae nesciunt itaque distinctio sapiente,
+                            expedita dolores odio dolore cumque!</p>
                     </div>
                     <div class="exp13">
                         <h5>March 2021 </h5>
                         <p>The University of Gafsa</p>
                         <h5>THE TECHNIQUES OF USING DRAMA GAMES IN TEACHING ARABIC AND ENGLISH LANGUAGES</h5>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum at quo voluptas amet nemo hic facilis, consequuntur alias autem unde repudiandae nesciunt itaque distinctio sapiente, expedita dolores odio dolore cumque!</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum at quo voluptas amet nemo
+                            hic facilis, consequuntur alias autem unde repudiandae nesciunt itaque distinctio sapiente,
+                            expedita dolores odio dolore cumque!</p>
                     </div>
                     <div class="exp14">
                         <h5>June 2024 - pursuing</h5>
                         <p>Coursera and Wesleyan University </p>
                         <h5>INTRODUCTION TO ABNORMAL PSYCHOLOGY </h5>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum at quo voluptas amet nemo hic facilis, consequuntur alias autem unde repudiandae nesciunt itaque distinctio sapiente, expedita dolores odio dolore cumque!</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum at quo voluptas amet nemo
+                            hic facilis, consequuntur alias autem unde repudiandae nesciunt itaque distinctio sapiente,
+                            expedita dolores odio dolore cumque!</p>
                     </div>
                     <div class="exp15">
                         <h5>June 2024 </h5>
                         <p>Inda Inter-Arabe </p>
                         <h5>IDEATION CAMP : BUSINESS MODEL CANVAS</h5>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum at quo voluptas amet nemo hic facilis, consequuntur alias autem unde repudiandae nesciunt itaque distinctio sapiente, expedita dolores odio dolore cumque!</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum at quo voluptas amet nemo
+                            hic facilis, consequuntur alias autem unde repudiandae nesciunt itaque distinctio sapiente,
+                            expedita dolores odio dolore cumque!</p>
                     </div>
                 </div>
                 <div class="ref">
@@ -237,14 +272,14 @@
                         Refrences
                     </h2>
                     <div style="border:solid 1px black"></div>
-    <div  class="d-flex gap-5 justify-content-space-around">
+                    <div class="d-flex  justify-content-space-around">
                         <div class="right">
                             <h3>
                                 Refrence 1
                             </h3>
                         </div>
-                        <div class="left" >
-                            <h3>
+                        <div class="left">
+                            <h3 style="border: 1px black; padding: 10px;">
                                 Refrence 2
                             </h3>
                         </div>
