fixing the line

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <div class="top d-flex justify-content-center align-item-center f-c" >
-            <div class="pic w-300 d-flex justify-content-center align-item-center" >
+            <div class="pic w-300 d-flex justify-content-center align-item-center" style="padding: 20px;">
                 <img src="./Assets/NourineDridi.jpg" alt="Nourine's picture" loading="lazy" width="200" height="200"
                     style="border-radius: 50%;">
             </div>
